--- a/gui/TODO
+++ b/gui/TODO
@@ -1,8 +1,7 @@
-slurping
 run scripts
 show article
 tagging
 progress bars (project loading, slurping, scripts etc)
 load/create project
 project settings (language, date format, tweet/arts etc)
-
+add cancel mechanism to slurping progress
