--- a/cmd/steno/TODO
+++ b/cmd/steno/TODO
@@ -1,7 +1,7 @@
 run scripts
-show article
 tagging
 progress bars (project loading, slurping, scripts etc)
 load/create project
 project settings (language, date format, tweet/arts etc)
 add cancel mechanism to slurping progress
+x show article
