--- a/cmd/steno/TODO
+++ b/cmd/steno/TODO
@@ -1,6 +1,6 @@
 run scripts
 progress bars (project loading, slurping, scripts etc)
-load/create project
+x load/create project
 project settings (language, date format, tweet/arts etc)
 add cancel mechanism to slurping progress
 x show article
